// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQCL-Rl1QFad0ir0AiSXom_WG-zu69XosB3Ua7nV0pjf7IoV"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQCOh7dSpd8D6LOZkQgMy5MHkQq5y3qmhsQTbz9N8TYLRRup"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQBo284vChJMzN0gmp7AtCtWP-i3zY4EG_yD6rjIHqw0pKuK"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQCL-Rl1QFad0ir0AiSXom_WG-zu69XosB3Ua7nV0pjf7IoV",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16324n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCL-Rl1QFad0ir0AiSXom_WG-zu69XosB3Ua7nV0pjf7IoV",
            "to": "kQCOh7dSpd8D6LOZkQgMy5MHkQq5y3qmhsQTbz9N8TYLRRup",
            "type": "internal",
            "value": 9971337000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCL-Rl1QFad0ir0AiSXom_WG-zu69XosB3Ua7nV0pjf7IoV",
          "to": "kQCOh7dSpd8D6LOZkQgMy5MHkQq5y3qmhsQTbz9N8TYLRRup",
          "type": "internal",
          "value": 9971337000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14101n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCOh7dSpd8D6LOZkQgMy5MHkQq5y3qmhsQTbz9N8TYLRRup",
            "to": "kQBo284vChJMzN0gmp7AtCtWP-i3zY4EG_yD6rjIHqw0pKuK",
            "type": "internal",
            "value": 9948815000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCOh7dSpd8D6LOZkQgMy5MHkQq5y3qmhsQTbz9N8TYLRRup",
          "to": "kQBo284vChJMzN0gmp7AtCtWP-i3zY4EG_yD6rjIHqw0pKuK",
          "type": "internal",
          "value": 9948815000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14111n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBo284vChJMzN0gmp7AtCtWP-i3zY4EG_yD6rjIHqw0pKuK",
            "to": "kQBo284vChJMzN0gmp7AtCtWP-i3zY4EG_yD6rjIHqw0pKuK",
            "type": "internal",
            "value": 9926275000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBo284vChJMzN0gmp7AtCtWP-i3zY4EG_yD6rjIHqw0pKuK",
          "to": "kQBo284vChJMzN0gmp7AtCtWP-i3zY4EG_yD6rjIHqw0pKuK",
          "type": "internal",
          "value": 9926275000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3365n,
      },
    ],
  },
]
`;
